# varys-ai

./: .gitignore  CHANGELOG.md  CLAUDE.md  INSTALL.md  LICENSE  README.md  deploy.sh  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: security-audit.yml
docs/: graph_architecture.md  summary_store.md
documentation/: varys_capabilities_20260328.md  varys_on_ec2.md  wiki.html
evaluation/: README.md  nb4_agent_integration.ipynb  nb5_file_agent_multi_provider.ipynb
lib/: index.d.ts.map  index.js
lib/api/: client.d.ts  client.d.ts.map  client.js
lib/completion/: InlineCompletionProvider.d.ts.map  InlineCompletionProvider.js
lib/context/: kernelSnapshot.d.ts  kernelSnapshot.d.ts.map  kernelSnapshot.js
lib/editor/: CellEditor.d.ts  CellEditor.d.ts.map  CellEditor.js
lib/graph/: GraphEdge.d.ts  GraphEdge.d.ts.map  GraphEdge.js  GraphNode.d.ts  GraphNode.d.ts.map  GraphNode.js  GraphPanel.d.ts  GraphPanel.d.ts.map  GraphPanel.js  graphTypes.d.ts  graphTypes.d.ts.map  graphTypes.js  graphUtils.d.ts  graphUtils.d.ts.map  graphUtils.js  useGraphData.d.ts  useGraphData.d.ts.map  useGraphData.js
lib/reproducibility/: ReproPanel.d.ts.map  ReproPanel.js
lib/sidebar/: SidebarWidget.d.ts  SidebarWidget.d.ts.map  SidebarWidget.js
lib/tags/: cellTagOverlay.d.ts  cellTagOverlay.d.ts.map  cellTagOverlay.js
lib/ui/: DiffView.d.ts  DiffView.d.ts.map  DiffView.js  FileChangeCard.d.ts  FileChangeCard.d.ts.map  FileChangeCard.js  FileDiffView.d.ts  FileDiffView.d.ts.map  FileDiffView.js
src/: index.ts
src/api/: client.ts
src/completion/: InlineCompletionProvider.ts
src/context/: kernelSnapshot.ts
src/editor/: CellEditor.ts
src/graph/: GraphEdge.tsx  GraphNode.tsx  GraphPanel.tsx  graphTypes.ts  graphUtils.ts  graphWorker.ts  useGraphData.ts
src/reproducibility/: ReproPanel.tsx
src/sidebar/: SidebarWidget.tsx
src/tags/: cellTagOverlay.ts
src/ui/: ActionBar.tsx  DiffView.tsx  FileChangeCard.tsx  FileDiffView.tsx
stress/: README.md  missing_testids.md  primitives.yaml  primitives_extractor.py  prompt.md  varys-primitives-extraction-spec.md
style/: base.css
varys/: CHANGELOG.md  _version.py  app.py  bash_guard.py  usage_reader.py  usage_writer.py
varys/agent/: __init__.py  agent_runner.py  local_config.py  provider_base.py  provider_factory.py  repo_scan_store.py  tool_definition.py  tool_schemas.py  tools.py  utils.py
varys/agent/providers/: anthropic_provider.py  azure_provider.py  bedrock_provider.py  google_provider.py  ollama_provider.py  openai_provider.py
varys/bundled_config/: agent.cfg
varys/bundled_skills/code_style/: SKILL.md
varys/bundled_skills/eda/: SKILL.md
varys/bundled_skills/file_agent/: README.md  SKILL.md
varys/bundled_skills/generate-notebook/: SKILL.md
varys/bundled_skills/load-dataframe/: SKILL.md
varys/bundled_skills/notebook-annotation/: SKILL.md
varys/bundled_skills/notebook-code-review/: SKILL.md
varys/bundled_skills/notebook-ds-review/: SKILL.md
varys/bundled_skills/notebook-report-generation/: SKILL.md
varys/bundled_skills/notebook_to_module/: README.md  SKILL.md
varys/bundled_skills/plot/: SKILL.md
varys/bundled_skills/readme_gen/: SKILL.md
varys/bundled_skills/regroup_by_function/: SKILL.md
varys/bundled_skills/reorganize/: SKILL.md
varys/bundled_skills/reorganize_cell/: SKILL.md
varys/bundled_skills/safe_operations/: SKILL.md
varys/bundled_skills/unittest/: SKILL.md
varys/bundled_skills/varys/: README.md
varys/context/: action_stems.py  assembler.py  kernel_state.py  summarizer.py  summary_store.py
varys/graph/: __init__.py  anomaly.py  ast_fallback.py  builder.py
varys/handlers/: agent_accept.py  agent_change.py  agent_handler.py  agent_reject.py  agent_settings.py  auto_tag.py  bundled_skills.py  cell_executed.py  changelog.py  chat_history.py  graph.py  nb_migration.py  nb_move.py  notebook_opened.py  ollama.py  rag.py  settings.py  skills.py  task.py  usage.py  version_check.py  warnings.py
varys/labextension/: package.json
varys/labextension/static/: 181.0a060f7153da434a6d5c.js  181.0a8a85e544b1081b24b6.js  181.0b4b1e762a2030e79d23.js  181.0f436cb1f5b054f49737.js  181.11c5d5f976151c1f721c.js  181.19983ac9068a63515dc3.js  181.1a5f02100ee55323c6bf.js  181.1b96052e5e26fd04a846.js  181.2869390a80c5f250cdf8.js  181.2f2b530d54c787e33bca.js  181.3183dcfa5a977a0c555c.js  181.31e15748938754ad05dc.js  181.3472d947d492b0664049.js  181.415d5478c2e704d8858c.js  181.4a332ead07c8830acf9d.js  181.4efaba99d43bc8b1561f.js  181.528b35e1c7b647e176ad.js  181.5545bab2de0e57db9922.js  181.5561f3eec5725eb76947.js  181.6067e24c53616fced5ef.js  181.691e1ac5aceb4ca213f2.js  181.6ab13f7b5db4e6b5af95.js  181.6c1e6957925190c9c568.js  181.6ee60244d847120d0413.js  181.70eddce0daadbc1b0711.js  181.74fc26515d96b871ec5b.js  181.77dedc7605d5882429c1.js  181.7ac8570ef8804f10146c.js  181.7b7530fe062facea68b6.js  181.7ce907d4d44bb7700685.js  181.7f0f64d9ed293ca824e5.js  181.8168be44486d54fc60a3.js  181.8604c013ebe5d20667ce.js  181.86d26a697efe3d48343b.js  181.87e47854135f5068b4d4.js  181.91ec13e4d1eae63ca5ec.js  181.925272999bfbbc12a334.js  181.9f7865a1611027851786.js  181.a6c5611d04c4015d191b.js  181.a9cb16fa041c31f157fa.js  (+352 more)
varys/llm/: anthropic_provider.py  azure_provider.py  base.py  bedrock_provider.py  client.py  context_utils.py  factory.py  google_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
varys/mcp/: server.py
varys/memory/: inference.py  injection.py  preference_store.py
varys/modules/reproducibility_guardian/: analyzer.py  rules.py  storage.py
varys/rag/: manager.py  store.py
varys/report/: generator.py
varys/skills/: loader.py
varys/tags/: library.json
varys/utils/: dotenv.py  migration.py  paths.py
varys_tests/: __init__.py  conftest.py
varys_tests/curriculum/: README.md  dag.py  generate.py  prompts_gentest.md  scenario_loader.py  tasks.py
varys_tests/curriculum/fixtures/: messy_sales_analysis.ipynb  (+1 more)
varys_tests/harness/: executor.py  judge.py  jupyter_server.py  notebook_state.py  varys_driver.py
(+5 files in other folders)
